test/files/neg/bug1872.scala
class A {
  // a true result here would necessitate profound soul searching
  def f(x: Int) = x.isInstanceOf[util.Random]
}